--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,13 @@
 name: CI
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+    - main
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+    - main
+    - feature/*
+    - features/*
 
 env:
   CARGO_TERM_COLOR: always
