--- a/pyqir-jit/Cargo.toml
+++ b/pyqir-jit/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 
 [dependencies]
 microsoft-quantum-qir-runtime-sys = { git = "https://github.com/microsoft/qsharp-runtime", rev = "d955aec7", default-features = false, features = ["runtime", "foundation", "llvm-libloading"] }
-qirlib = { path = "../qirlib" }
+qirlib = { path = "../qirlib", features = ["jit"]  }
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm11-0", "target-x86"] }
 lazy_static = "1.4.0"
 mut_static = "5.0.0"
@@ -40,6 +40,8 @@ classifier=[
     "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python",
     "Programming Language :: Rust",
     "Operating System :: MacOS",
