--- a/pyqir-generator/Cargo.toml
+++ b/pyqir-generator/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Microsoft"]
 name = "pyqir-generator"
-version = "0.1.0"
+version = "0.1.0-alpha"
 edition = "2018"
 license = "MIT"
 description = "Python based QIR generator library."
