--- a/.github/workflows/link_and_spell_check.yml
+++ b/.github/workflows/link_and_spell_check.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - run: |
-        Get-ChildItem (Join-Path ".github" "utils") `
+        Get-ChildItem (Join-Path ".github" "utils" "problem-matchers") `
           | ForEach-Object {
             Write-Host "Adding matcher $_...";
             Write-Host "::add-matcher::$_";
