--- a/.github/workflows/link_and_spell_check.yml
+++ b/.github/workflows/link_and_spell_check.yml
@@ -23,7 +23,7 @@ jobs:
       uses: nosborn/github-action-markdown-cli@v2.0.0
       with:
         files: .
-        config_file: '.github/utils/md_lint_config.yaml'
+        config_file: '.github/utils/md_lint_config.yml'
     - name: Markdown link check
       # cspell:words gaurav
       uses: gaurav-nelson/github-action-markdown-link-check@v1
