Removing execution_engine from context

--- a/pyqir-jit/Cargo.toml
+++ b/pyqir-jit/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 
 [dependencies]
 microsoft-quantum-qir-runtime-sys = { git = "https://github.com/microsoft/qsharp-runtime", rev = "f4f28123601d8372a5fe120bdab1f2be25b51522", default-features = false, features = ["runtime", "foundation", "llvm-libloading"] }
-qirlib = { path = "../qirlib", features = ["jit"] }
+qirlib = { path = "../qirlib" }
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm11-0", "target-x86"] }
 lazy_static = "1.4.0"
 mut_static = "5.0.0"
