--- a/.github/workflows/link_and_spell_check.yml
+++ b/.github/workflows/link_and_spell_check.yml
@@ -18,7 +18,7 @@ jobs:
         mv out/workflow-templates/utils/ utils && rm -r out
       shell: bash
     - run: |
-        Get-ChildItem (Join-Path "utils" "problem-matchers") `
+        Get-ChildItem (Join-Path "eng" "problem-matchers") `
           | ForEach-Object {
             Write-Host "Adding matcher $_...";
             Write-Host "::add-matcher::$_";
@@ -29,7 +29,7 @@ jobs:
       uses: nosborn/github-action-markdown-cli@v2.0.0
       with:
         files: .
-        config_file: 'utils/md_lint_config.yml'
+        config_file: '.markdownlint.yaml'
     - name: Markdown link check
       # cspell:words gaurav
       uses: gaurav-nelson/github-action-markdown-link-check@v1
@@ -45,4 +45,4 @@ jobs:
         # positives with terminology in quantum computing.
         strict: false
         incremental_files_only: true
-        config: 'utils/spelling_allowlist.json'
+        config: 'cspell.json'
