Fix a couple more warnings.

--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -11,3 +11,9 @@ ul-style:
 # Allow duplicate headings if they are not siblings.
 no-duplicate-heading:
   siblings_only: true
+
+no-inline-html:
+  allowed_elements:
+    # We want to enable a more readable alternative to the "two spaces at the
+    # end of a line" default in Markdown.
+    - br
