Build conceptual and API docs with Sphinx (#30)
* Move initial support for Sphinx docs from old repo.

* Publish docs to artifacts, GH Pages.

* Fix link.

* Fix ci.yml.

* Fix taskList.

* Fix ci.yml.

* Allow build to complete by ignoring false +ve clippy.

* Split out docs build into new job.

* Check out source for docs.

* Don't clone submodules when building docs.

* Add more explicit error messages to venv call.

* Even more explicit errors.

* Build docs on linux instead.

* Update pyqir-jit/src/lib.rs

Co-authored-by: Sarah Marshall <33814365+samarsha@users.noreply.github.com>

* Update docs/apiref/parser.md

Co-authored-by: Sarah Marshall <33814365+samarsha@users.noreply.github.com>

* Update eng/psakefile.ps1

Co-authored-by: Sarah Marshall <33814365+samarsha@users.noreply.github.com>

* Suggestions from code review.

* Remove extraneous semicolons.

* Add missing config files for lint / link check CI.

* Fix broken links.

* Fixes for false positives in lint CI, more details on how to write docs.

* Added required blank line.

* Fix a couple more warnings.

* Update eng/psakefile.ps1

Co-authored-by: Sarah Marshall <33814365+samarsha@users.noreply.github.com>

* Update eng/psakefile.ps1

Co-authored-by: Sarah Marshall <33814365+samarsha@users.noreply.github.com>

Co-authored-by: Sarah Marshall <33814365+samarsha@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,3 +59,42 @@ jobs:
         with:
           name: artifacts
           path: target/wheels/*
+
+  docs:
+    runs-on: "ubuntu-20.04"
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: false
+
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: artifacts
+          path: wheelhouse
+
+      - name: Build Docs
+        run: |
+          $properties = @{
+            "wheelhouse" = (Resolve-Path "wheelhouse/*-linux_x86_64.whl")
+          };
+          ./eng/build.ps1 `
+            -taskList docs `
+            -properties $properties
+        shell: pwsh
+
+      # Always publish docs as an artifact, but only publish docs to GitHub Pages
+      # when pushing to main.
+      - name: Publish Docs as Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: docs
+          path: docs/_build
+
+      - name: Publish Docs to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.7
+        with:
+          branch: gh-pages
+          folder: docs/_build/html
+        if: ${{ github.event_name == 'push' }}
