Fix tox dependencies

--- a/pyqir-generator/tox.ini
+++ b/pyqir-generator/tox.ini
@@ -11,7 +11,9 @@ setenv =
 # needed temporarily for build to find cl.exe
 passenv = *
 
-deps = -rrequirements-dev.txt
+deps =
+    --editable=../pyqir-jit
+    --requirement=requirements-dev.txt
 
 [testenv:test]
 description = Run the unit tests under {basepython}
