Add pyqir-tests project

--- a/pyqir-generator/tox.ini
+++ b/pyqir-generator/tox.ini
@@ -11,9 +11,7 @@ setenv =
 # needed temporarily for build to find cl.exe
 passenv = *
 
-deps =
-    --editable=../pyqir-jit
-    --requirement=requirements-dev.txt
+deps = -rrequirements-dev.txt
 
 [testenv:test]
 description = Run the unit tests under {basepython}
