--- a/pyqir-parser/Cargo.toml
+++ b/pyqir-parser/Cargo.toml
@@ -24,6 +24,7 @@ name = "pyqir_parser"
 crate-type = ["cdylib"]
 
 [package.metadata.maturin]
+name = "pyqir.parser._native"
 classifier=[
     "License :: OSI Approved :: MIT License",
     "Development Status :: 3 - Alpha",
