--- a/pyqir-generator/Cargo.toml
+++ b/pyqir-generator/Cargo.toml
@@ -10,13 +10,14 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-qirlib = { path = "../qirlib" }
-inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm11-0", "target-x86"] }
 env_logger = "0.9.0"
+inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm11-0", "target-x86"] }
 log = "0.4.14"
+pyo3 = "0.15.1"
+qirlib = { path = "../qirlib" }
 
-[dependencies.pyo3]
-version = "0.15.1"
+[dev-dependencies]
+normalize-line-endings = "0.3.0"
 
 [features]
 extension-module = ["pyo3/abi3-py36", "pyo3/extension-module"]
