--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -14,6 +14,7 @@ rand="0.8.4"
 base64 = "0.13.0"
 lazy_static = "1.4.0"
 mut_static = "5.0.0"
+clap = { version = "3.1.1", features = ["derive"] }
 
 [dev-dependencies]
 serial_test = "0.5.1"
@@ -21,6 +22,10 @@ tempfile = "3.2.0"
 
 [lib]
 name = "qirlib"
+
+[[bin]]
+name = "qirlink"
+path = "src/link.rs"
 
 [features]
 default = []
