--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -3,6 +3,7 @@ name = "qirlib"
 version = "0.3.0"
 edition = "2018"
 description = "Base Profile QIR library"
+build = "build.rs"
 
 [dependencies]
 llvm-sys = "110"
@@ -21,8 +22,24 @@ serial_test = "0.5.1"
 tempfile = "3.2.0"
 normalize-line-endings = "0.3.0"
 
+[build-dependencies]
+cmake="0.1.48"
+cc = "1.0"
+lazy_static = "1.0"
+regex = "1.0"
+semver = "1.0.6"
+
 [lib]
 name = "qirlib"
 
 [features]
+# default assumes LLVM is installed and linked though llvm-sys and inkwell
+# install download an archive and extract it
+# download does install + link those libs and compile qirlib
+# package clones the LLVM source, and builds it, and creates an archive
+# build clones the LLVM source, and builds it, then link those libs and compile qirlib
 default = []
+install-llvm = ["llvm-sys/disable-alltargets-init", "inkwell/llvm11-0-no-llvm-linking"]
+download-llvm = ["llvm-sys/disable-alltargets-init", "inkwell/llvm11-0-no-llvm-linking"]
+package-llvm = ["build-llvm"]
+build-llvm = ["llvm-sys/disable-alltargets-init", "inkwell/llvm11-0-no-llvm-linking"]
