Setting PYTHONIOENCODING in tox for integration tests.

--- a/pyqir-tests/tox.ini
+++ b/pyqir-tests/tox.ini
@@ -2,6 +2,11 @@
 isolated_build = true
 
 [testenv]
+# https://github.com/tox-dev/tox/issues/1550
+# PYTHONIOENCODING = utf-8 needs to be set to work around windows bug
+setenv =
+    PYTHONIOENCODING = utf-8
+
 deps =
     --editable=../pyqir-generator
     --editable=../pyqir-evaluator
