qirlib default feature is now empty.

--- a/pyqir-evaluator/Cargo.toml
+++ b/pyqir-evaluator/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-qirlib = { path = "../qirlib" }
+qirlib = { path = "../qirlib", features = ["external-llvm-linking"] }
 
 [dependencies.pyo3]
 version = "0.15.1"
