--- a/pyqir-generator/Cargo.toml
+++ b/pyqir-generator/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 env_logger = "0.9.0"
 log = "0.4.14"
 pyo3 = "0.15.1"
-qirlib = { path = "../qirlib" }
+qirlib = { path = "../qirlib", features = ["external-llvm-linking"] }
 
 [features]
 extension-module = ["pyo3/abi3-py36", "pyo3/extension-module"]
