--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -33,16 +33,19 @@ semver = "1.0.6"
 name = "qirlib"
 
 [features]
-# default assumes nothing.
-# install download an archive and extract it
-# download does install + link those libs and compile qirlib
-# package clones the LLVM source, and builds it, and creates an archive
-# build clones the LLVM source, and builds it, then link those libs and compile qirlib
-default = []
-install-llvm = ["no-llvm-linking"]
-download-llvm = ["internal-llvm-linking"]
-package-llvm = ["no-llvm-linking"]
-build-llvm = ["internal-llvm-linking"]
-internal-llvm-linking = ["llvm-sys/disable-alltargets-init", "inkwell/llvm11-0-no-llvm-linking"]
+
+# default to use llvm-sys/inkwell for llvm linking
+default = ["external-llvm-linking"]
 external-llvm-linking = []
+# disable linking for local installation or packaging
 no-llvm-linking = ["llvm-sys/disable-alltargets-init", "inkwell/llvm11-0-no-llvm-linking"]
+# let qirlib do the llvm linking
+qirlib-llvm-linking = ["llvm-sys/disable-alltargets-init", "inkwell/llvm11-0-no-llvm-linking"]
+
+download-llvm = []
+build-llvm = []
+
+# Dev use only for packaging LLVM builds
+package-llvm = ["build-llvm", "no-llvm-linking"]
+
+
