Homepage and repository will be available in package metadata

--- a/pyqir-parser/Cargo.toml
+++ b/pyqir-parser/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 license = "MIT"
 description = "Python based QIR parser library."
 readme = "README.md"
+homepage = "https://github.com/qir-alliance/pyqir"
+repository = "https://github.com/qir-alliance/pyqir"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
