--- a/pyqir/setup.cfg
+++ b/pyqir/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyqir
-version = 0.3.0b1
+version = 0.3.0a1
 author = Microsoft
 description = PyQIR - set of APIs for generating, parsing, and evaluating Quantum Intermediate Representation (QIR)
 long_description = file: README.md
@@ -26,15 +26,13 @@ classifiers =
 package_dir =
 	= .
 packages = find:
-python_requires = >=3.6
-
-[options.extras_require]
-generator = pyqir-generator
-evaluator = pyqir-evaluator
-parser = pyqir-parser
+python_requires = >= 3.6
+install_requires =
+	pyqir-generator >= 0.3.0a1
+	pyqir-evaluator >= 0.3.0a1
+ 	pyqir-parser >= 0.3.0a1
 
 [options.packages.find]
 where = .
 
 [bdist_wheel]
-universal = 1
