--- a/pyqir/setup.cfg
+++ b/pyqir/setup.cfg
@@ -2,6 +2,7 @@
 name = pyqir
 version = 0.3.0a1
 author = Microsoft
+license = MIT
 description = PyQIR - set of APIs for generating, parsing, and evaluating Quantum Intermediate Representation (QIR)
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -24,16 +25,8 @@ classifiers =
 	Operating System :: Unix
 
 [options]
-package_dir =
-	= .
-packages = find:
 python_requires = >= 3.6
 install_requires =
 	pyqir-generator >= 0.3.0a1
 	pyqir-evaluator >= 0.3.0a1
  	pyqir-parser >= 0.3.0a1
-
-[options.packages.find]
-where = .
-
-[bdist_wheel]
