--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -2,6 +2,7 @@
 name = "qirlib"
 version = "0.3.0"
 edition = "2018"
+license = "MIT"
 description = "Base Profile QIR library"
 build = "build.rs"
 readme = "README.md"
@@ -13,9 +14,8 @@ rust-version = "1.57"
 llvm-sys = "110"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm11-0", "target-x86"] }
 log = "0.4.14"
-libloading = "0.7.0"
-cty="0.2.1"
-rand="0.8.4"
+cty = "0.2.1"
+rand = "0.8.4"
 base64 = "0.13.0"
 lazy_static = "1.4.0"
 mut_static = "5.0.0"
