Adding cache env vars

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ on:
 env:
   CARGO_TERM_COLOR: always
   QIRLIB_DOWNLOAD_LLVM: false
+  LLVM_CCACHE_DIR: ~/.ccache
+  SCCACHE_DIR: ~/.cache/sccache
 
 jobs:
   build:
