--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - uses: actions/cache@v3
+      - name: Cargo cache
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cargo/bin/
@@ -67,7 +68,8 @@ jobs:
         id: timestamp
         run: Write-Host "::set-output name=timestamp::$([DateTime]::UtcNow.ToString('o'))"
         shell: pwsh
-      - uses: actions/cache@v3
+      - name: CCACHE cache
+        uses: actions/cache@v3
         with:
           path: |
             ~/.ccache
@@ -75,7 +77,8 @@ jobs:
           restore-keys: |
               ${{ matrix.config.os }}-ccache-
         if: ${{ matrix.config.os != 'windows-2019' }}
-      - uses: actions/cache@v3
+      - name: SCCACHE cache
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cache/sccache
