--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - name: Linux - Install build dependencies, ccache, and update PATH to use linked versions of gcc, cc, etc
+      - name: Linux - Install build dependencies, ccache, ninja
         run: sudo apt-get install -y ccache ninja-build
         if: ${{ matrix.config.os == 'ubuntu-20.04' }}
-      - name: Windows - Install build dependencies, ccache, and update PATH to use linked versions of gcc, cc, etc
+      - name: Windows - Install build dependencies, sccache, ninja
         run: choco install --accept-license -y sccache ninja
         if: ${{ matrix.config.os == 'windows-2019' }}
-      - name: MacOS - Install build dependencies, ccache, and update PATH to use linked versions of gcc, cc, etc
+      - name: MacOS - Install build dependencies, ccache, ninja
         run: brew install ccache ninja
         if: ${{ matrix.config.os == 'macOS-10.15' }}
       - name: Windows - Install LLVM 11.1.0
