--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  QIRLIB_DOWNLOAD_LLVM: false
+  CCACHE_DIR: ~/.ccache
+  SCCACHE_DIR: C:\sccache
 
 jobs:
   build:
@@ -39,17 +42,39 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - name: Linux - Install build dependencies, ccache, and update PATH to use linked versions of gcc, cc, etc
+      - name: Linux - Install build dependencies, ccache, ninja
         run: sudo apt-get install -y ccache ninja-build
         if: ${{ matrix.config.os == 'ubuntu-20.04' }}
-      - name: Windows - Install build dependencies, ccache, and update PATH to use linked versions of gcc, cc, etc
+      - name: Windows - Install build dependencies, sccache, ninja
         run: choco install --accept-license -y sccache ninja
         if: ${{ matrix.config.os == 'windows-2019' }}
-      - name: MacOS - Install build dependencies, ccache, and update PATH to use linked versions of gcc, cc, etc
+      - name: MacOS - Install build dependencies, ccache, ninja
         run: brew install ccache ninja
         if: ${{ matrix.config.os == 'macOS-10.15' }}
       - name: Windows - Install LLVM 11.1.0
         run: choco install llvm --version=11.1.0 --allow-downgrade
+        if: ${{ matrix.config.os == 'windows-2019' }}
+      - name: Get Timestamp
+        id: timestamp
+        run: Write-Host "::set-output name=timestamp::$([DateTime]::UtcNow.ToString('o'))"
+        shell: pwsh
+      - name: CCACHE cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ env.CCACHE_DIR }}
+          key: ${{ matrix.config.os }}-ccache-${{ steps.timestamp.outputs.timestamp }}
+          restore-keys: |
+              ${{ matrix.config.os }}-ccache-
+        if: ${{ matrix.config.os != 'windows-2019' }}
+      - name: SCCACHE cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ env.SCCACHE_DIR }}
+          key: ${{ matrix.config.os }}-sccache-${{ steps.timestamp.outputs.timestamp }}
+          restore-keys: |
+              ${{ matrix.config.os }}-sccache-
         if: ${{ matrix.config.os == 'windows-2019' }}
       - name: "Build all"
         run: ./build.ps1
