--- a/pyqir-parser/tox.ini
+++ b/pyqir-parser/tox.ini
@@ -16,10 +16,17 @@ deps = -rrequirements-dev.txt
 [testenv:test]
 description = Run the unit tests under {basepython}
 commands =
-    python -m pip install .
+    maturin develop --release --cargo-extra-args="-vv"
     pytest {posargs}
 
 [testenv:pack]
 description = Build the wheels under all installed platforms
 commands =
-    maturin build --release
+    maturin build --release --cargo-extra-args="-vv"
+
+[testenv:all]
+description = Build the wheels under all installed platforms
+commands =
+    maturin build --release --cargo-extra-args="-vv"
+    maturin develop --release --cargo-extra-args="-vv"
+    pytest {posargs}
