Disabling auditwheel during musl builds

--- a/pyqir-evaluator/tox.ini
+++ b/pyqir-evaluator/tox.ini
@@ -30,3 +30,10 @@ commands =
     maturin build --release --cargo-extra-args="-vv"
     maturin develop --release --cargo-extra-args="-vv"
     pytest {posargs}
+
+[testenv:allmusl]
+description = Build the wheels under all installed platforms
+commands =
+    maturin build --skip-auditwheel --release --cargo-extra-args="-vv"
+    maturin develop --release --cargo-extra-args="-vv"
+    pytest {posargs}
