Pull manylinux artifacts for docs build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Download Build Artifacts
         uses: actions/download-artifact@v2
         with:
-          name: artifacts
+          name: manylinux-artifacts
           path: wheelhouse
 
       - name: Build Docs
