--- a/pyqir-tests/tox.ini
+++ b/pyqir-tests/tox.ini
@@ -14,3 +14,9 @@ deps =
 
 [testenv:test]
 commands = pytest {posargs}
+
+[testenv:all]
+commands = pytest {posargs}
+
+[testenv:allmusl]
+commands = pytest {posargs}
