Allowing multiple LLVM versions to be used.

--- a/pyqir-evaluator/tox.ini
+++ b/pyqir-evaluator/tox.ini
@@ -16,24 +16,24 @@ deps = -rrequirements-dev.txt
 [testenv:test]
 description = Run the unit tests under {basepython}
 commands =
-    maturin develop --release --cargo-extra-args="-vv"
+    maturin develop --release --cargo-extra-args="{env:CARGO_EXTRA_ARGS}"
     pytest {posargs}
 
 [testenv:pack]
 description = Build the wheels under all installed platforms
 commands =
-    maturin build --release --cargo-extra-args="-vv"
+    maturin build --release --cargo-extra-args="{env:CARGO_EXTRA_ARGS}"
 
 [testenv:all]
 description = Build the wheels under all installed platforms
 commands =
-    maturin build --release --cargo-extra-args="-vv"
-    maturin develop --release --cargo-extra-args="-vv"
+    maturin build --release --cargo-extra-args="{env:CARGO_EXTRA_ARGS}"
+    maturin develop --release --cargo-extra-args="{env:CARGO_EXTRA_ARGS}"
     pytest {posargs}
 
 [testenv:allmusl]
 description = Build the wheels under all installed platforms
 commands =
-    maturin build --skip-auditwheel --release --cargo-extra-args="-vv"
-    maturin develop --release --cargo-extra-args="-vv"
+    maturin build --skip-auditwheel --release --cargo-extra-args="{env:CARGO_EXTRA_ARGS}"
+    maturin develop --release --cargo-extra-args="{env:CARGO_EXTRA_ARGS}"
     pytest {posargs}
